[package]
name = "ashfire_cli"
description = "Cli for the Firelang language compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
clap-verbosity-flag = "2.0.1"
log = "0.4.18"
env_logger = { features = ["auto-color"], default-features = false, version = "0.10.0" }
ashfire = { path = "crates/ashfire" }
firelib = { path = "crates/firelib" }

[workspace]
members = [
    "crates/ashlib",
    "crates/ashfire",
    "crates/ashfire_types",
    "crates/firelib",
    "crates/firelib_macro",
    "crates/wasm_backend",
]

[workspace.package]
authors = ["Luna Amora <luna.mberry@gmail.com>"]
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"
