[package]
name = "ashfire_cli"
description = "Cli for the Firelang language compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
clap = { version = "4.5.17", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
log = "0.4.22"
env_logger = { features = ["auto-color"], default-features = false, version = "0.11.5" }
ashfire = { path = "crates/ashfire" }
firelib = { path = "crates/firelib" }

[workspace]
members = [
    "crates/ashlib",
    "crates/ashfire",
    "crates/ashfire_types",
    "crates/firelib",
    "crates/firelib_macro",
    "crates/wasm_backend",
]

[workspace.package]
authors = ["Luna Amora <luna.mberry@gmail.com>"]
repository = "https://github.com/LunaAmora/Ashfire"
version = "0.1.0"
edition = "2021"
readme = "README.md"
license-file = "LICENSE"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_const_for_fn = "allow"

pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
uninlined_format_args = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
must_use_candidate = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
enum_glob_use = "allow"

allow_attributes_without_reason = "warn"
as_conversions = "warn"
