[package]
name = "ashfire"
description = "Compiler for the Firelang language"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
log = "0.4.17"
itertools = "0.10.5"
ashlib = { path = "../ashlib" }
firelib = { path = "../firelib" }
wasm_backend = { path = "../wasm_backend" }
ashfire_types = { path = "../ashfire_types" }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "compilation_test"
harness = false
