[package]
name = "ashfire"
description = "Compiler for the Firelang language"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
log = "0.4.22"
itertools = "0.13.0"
num = { default-features = false, version = "0.4.3" }
ashlib = { path = "../ashlib" }
firelib = { path = "../firelib" }
wasm_backend = { path = "../wasm_backend" }
ashfire_types = { path = "../ashfire_types" }

[dev-dependencies]
criterion = { default-features = false, version = "0.5" }

[[bench]]
name = "compilation_test"
harness = false

[lints]
workspace = true
