[package]
name = "ashfire_types"
description = "Library used by the Ashfire compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
lasso = "0.6.0"
either = "1.8.1"
easy-ext = "1.0.1"
firelib = {path = "../firelib"}
