[package]
name = "ashfire_types"
description = "Library used by the Ashfire compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
lasso = "0.7.3"
either = "1.13.0"
easy-ext = "1.0.2"
firelib = { path = "../firelib" }

[lints]
workspace = true
