[package]
name = "ashlib"
description = "Library used by the Ashfire compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
repository.workspace = true
license-file.workspace = true

[dependencies]
either = "1.13.0"
firelib = { path = "../firelib" }

[lints]
workspace = true
