[package]
name = "firelib"
description = "Library used by the Ashfire compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
anyhow = "1.0"
itertools = "0.10.5"
firelib_macro = {path = "../firelib_macro", optional = true}

[features]
default = ["derive"]
derive = ["firelib_macro"]
