[package]
name = "firelib_macro"
description = "Library macros used by the Ashfire compiler"
version.workspace = true
edition.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true

[dependencies]
syn = "2.0"
quote = "1.0"

[lib]
proc-macro = true

[lints]
workspace = true
